# SmartTrafficLightSystemSimulator

./: .gitignore  CMakeLists.txt  README.md
include/: Intersection.hpp  Lane.hpp  TrafficLight.hpp
lane_input/: README.md  lane_input  lane_input.cpp
src/: Intersection.cpp  Lane.cpp  TrafficLight.cpp  main.cpp
tests/: CMakeLists.txt  test_traffic.cpp
